Finalizado o projeto backend

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.descricao.obrigatorio=O Campo descrição é obrigatório.
 campo.preco.obrigatorio=O Campo preço é obrigatório.
 campo.data.obrigatorio=O Campo data é obrigatório.
 campo.cliente.obrigatorio=O Campo cliente é obrigatório.
+
+campo.login.obrigatorio=O Campo login é obrigatório.
+campo.senha.obrigatorio=O Campo senha é obrigatório.
